--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@ body {
   background-color: #cfff0a; /*that good old toxic green */
 }
 
+.description{
+  display: flex;
+  flex-direction: row;
+}
 
 h1 {
   margin: 0px;
@@ -15,6 +19,18 @@ h1 {
   font-size: 270px;
   line-height: 270px;
   margin-left: 40px;
+}
+
+h2 {
+  margin: 0px;
+  height: 300px;
+  font-family: "itc-avant-garde-gothic-pro", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 95px;
+  line-height: 95px;
+  margin-left: 40px;
+  text-align: center;
 }
 
 .collection {
