--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,6 @@ body {
   background-color: #cfff0a; /*that good old toxic green */
 }
 
-.description{
-  display: flex;
-  flex-direction: row;
-}
 
 h1 {
   margin: 0px;
@@ -16,21 +12,12 @@ h1 {
   font-family: "itc-avant-garde-gothic-pro", sans-serif;
   font-weight: 500;
   font-style: normal;
-  font-size: 270px;
-  line-height: 270px;
+  font-size: 2000%;
+  line-height: 90%;
   margin-left: 40px;
-}
+  text-overflow: clip;
+  overflow: hidden;
 
-h2 {
-  margin: 0px;
-  height: 300px;
-  font-family: "itc-avant-garde-gothic-pro", sans-serif;
-  font-weight: 500;
-  font-style: normal;
-  font-size: 95px;
-  line-height: 95px;
-  margin-left: 40px;
-  text-align: center;
 }
 
 .collection {
@@ -90,14 +77,11 @@ a.link{
 
 a.link:hover{
   color: #e8e8e8;
-
-
 }
 
 .challenge{
   display: flex;
   flex-direction: row;
-
 }
 
 a.bullet{
